Correct display of reslut on mobile

--- a/shared/components/pages/ActivationPage.less
+++ b/shared/components/pages/ActivationPage.less
@@ -228,7 +228,7 @@
     margin-bottom: 10px;
 
     @media @phone {
-        font-size: 16px;
+        font-size: 25px;
         line-height: normal;
     }
 }
@@ -242,10 +242,6 @@
     &:hover {
         text-decoration: none;
     }
-
-    @media @phone {
-        font-size: 11px;
-    }
 }
 
 .ActivationPage__activation--sponsored {
@@ -256,7 +252,7 @@
 }
 
 .ActivationPage__score {
-    font-size: 40px;
+    font-size: 38px;
     color: @white-darker;
     text-shadow: rgba(0, 0, 0, 0.3) 2px 0px 3px;
     margin: 16px 0;
@@ -280,12 +276,20 @@
     &:hover {
         background-color: @white-dark;
     }
+
+    @media @phone {
+        width: 80%;
+    }
 }
 
 .ActivationPage__result-answers-btn {
     margin: 6px auto;
     color: @white-darker;
     display: block;
+
+    @media @phone {
+        width: 80%;
+    }
 }
 
 .ActivationPage__fill-profile-btn {
@@ -297,7 +301,11 @@
 
 .ActivationPage__results-text {
     flex: 1;
-    padding: 36px;
+    padding: 30px;
+
+    @media @phone {
+        padding: 10px 30px;
+    }
 }
 
 .ActivationPage__results-actions {
@@ -315,6 +323,10 @@
     left: 0;
     align-items: center;
     display: flex;
+
+    @media @phone {
+        flex-direction: column;
+    }
 }
 
 .ActivationPage__tip {
@@ -349,6 +361,11 @@
 
     &.excellent {
         background-image: url('/static/images/resultBackgrounds/excellent.png');
+    }
+
+    @media @phone {
+        min-height: 300px;
+        text-align: center;
     }
 }
 
